--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit>=1.24.0
+streamlit==1.24.0
 openai==0.28
-moviepy>=1.0.3
-SpeechRecognition>=3.10.0
-pysrt>=1.1.2
-langdetect>=1.0.9
-requests>=2.31.0
-python-dotenv>=1.0.0
+moviepy==1.0.3
+SpeechRecognition==3.10.0
+pysrt==1.1.2
+langdetect==1.0.9
+requests==2.31.0
+python-dotenv==1.0.0
+typing-extensions>=4.0.0
